# APISpeedTest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: benchmark-and-publish.yml
apispeedtest/: cli.py  config.py  latency_tester.py  mcp_server.py  model_registry.py
examples/: basic.yaml  tokens-50.yaml  tokens-large.yaml  tokens-medium.yaml
